# aidb_qt_demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  set_env.sh
aidb/include/: AIDBData.h  AIDBDefine.h  Interpreter.h  Utility.h  face_align.h  td_obj.h
aidb/lib/: libAiDB.dylib
src/: aidbbin.hpp  aidbdeque.hpp  aidbmap.hpp  aidbqueue.hpp  aidbworker.cpp  aidbworker.hpp  mainwindow.cpp  mainwindow.hpp  utils.hpp
src/forms/: MainWindow.ui  mainwindow.ui
themes/: macos.qss
